--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,4 @@
 <h1>Welcome to the Finance tracker app</h1>
+<%= link_to "My portfolio", my_portfolio_path %>
 
 <%= link_to "logout", destroy_user_session_path, method: :delete %>
