--- a/app/views/users/my_portfolio.html.erb
+++ b/app/views/users/my_portfolio.html.erb
@@ -2,7 +2,7 @@
 
 <h3>Search for Stocks</h3>
 <div id="stock-lookup">
-  <%= form_tag search_stocks_path, method: :get, id: "stock-lookup-form" do %>
+  <%= form_tag search_stocks_path, remote: true, method: :get, id: "stock-lookup-form" do %>
   <div class="form-group row no-padding col-md-12">
     <div class="col-md-10">
       <%= text_field_tag :stock, params[:stock], placeholder: "Enter stock ticker symbol", autofocus: true, class: "form-control search-box input-lg" %>
@@ -12,14 +12,9 @@
         <i class="fa fa-search"></i> Search
       <% end %>
     </div>
-
   </div>
   <% end %>
 </div>
-<% if @stock %>
-  <div class="well results-block">
-    <strong>Symbol: </strong><%= @stock.ticker %>
-    <strong>Name: </strong><%= @stock.name %>
-    <strong>Price: </strong><%= @stock.last_price %>
-  </div>
-<% end %>
+<div id="results">
+  <%= render 'result' %>
+</div>
