--- a/app/views/users/_result.html.erb
+++ b/app/views/users/_result.html.erb
@@ -8,6 +8,19 @@
     <strong>Symbol: </strong><%= @stock.ticker %>
     <strong>Name: </strong><%= @stock.name %>
     <strong>Price: </strong><%= @stock.last_price %>
-    <%= link_to 'Add to my stocks', user_stocks_path(user: current_user, stock_ticker: @stock.ticker), class: "btn-xs btn-success", method: :post %>
+    <% if current_user.can_add_stock?(@stock.ticker) %>
+      <%= link_to 'Add to my stocks', user_stocks_path(user: current_user, stock_ticker: @stock.ticker), class: "btn-xs btn-success", method: :post %>
+    <% else %>
+      <span class="label label-default">
+        Stock annot be added because you have already added
+        <% if !current_user.under_stock_limit? %>
+          10 stocks
+        <% end %>
+        <% if current_user.stock_already_added?(@stock.ticker) %>
+          this stock
+        <% end %>
+        to your portfolio
+      </span>
+    <% end %>
   </div>
 <% end %>
