--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,3 +26,20 @@
 .left-padding {
   padding-left: 15px!important;
 }
+
+.logout {
+  padding-left: 0;
+}
+
+.user-name {
+  padding-top: 15px;
+}
+
+.nav.navbar-right li .btn{
+    color: #fff !important;
+    margin-top: 5%;
+}
+
+.nav.navbar-right li .btn-danger:hover {
+    background-color: darken(#d9534f, 20%) !important;
+}
