--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -8,7 +8,7 @@
       <div class="form-group">
         <div class="col-md-6 no-padding">
           <%= f.label :first_name %>
-          <%= f.text_field :first_name, class: 'form-control' %>
+          <%= f.text_field :first_name, autofocus: true, class: 'form-control' %>
         </div>
         <div class="col-md-6 no-padding left-padding">
           <%= f.label :last_name %>
@@ -17,15 +17,15 @@
       </div>
       <div class="form-group">
         <%= f.label :email %>
-        <%= f.email_field :email, autofocus: true, class: 'form-control' %>
+        <%= f.email_field :email, class: 'form-control' %>
       </div>
       <div class="form-group">
-        <%= f.label :password %> <i>(<%= t('.leave_blank_if_you_don_t_want_to_change_it', default: "leave blank if you don't want to change it") %>)</i>
+        <%= f.label :password, "New password" %> <i>(<%= t('.leave_blank_if_you_don_t_want_to_change_it', default: "leave blank if you don't want to change it") %>)</i>
         <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
       </div>
       <div class="form-group">
-        <%= f.label :password_confirmation %>
-        <%= f.password_field :password_confirmation, class: 'form-control'  %>
+        <%= f.label :password_confirmation, "New password confirmation" %>
+        <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control'  %>
       </div>
       <div class="form-group">
         <%= f.label :current_password %> <i>(<%= t('.we_need_your_current_password_to_confirm_your_changes', default: 'we need your current password to confirm your changes') %>)</i>
