--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,7 +8,7 @@
       <div class="form-group">
         <div class="col-md-6 no-padding">
           <%= f.label :first_name %>
-          <%= f.text_field :first_name, class: 'form-control' %>
+          <%= f.text_field :first_name, autofocus: true, class: 'form-control' %>
         </div>
         <div class="col-md-6 no-padding left-padding">
           <%= f.label :last_name %>
@@ -17,7 +17,7 @@
       </div>
       <div class="form-group">
         <%= f.label :email %>
-        <%= f.email_field :email, autofocus: true, class: 'form-control' %>
+        <%= f.email_field :email, class: 'form-control' %>
       </div>
       <div class="form-group">
         <%= f.label :password %>
