--- a/app/views/friends/_result.html.erb
+++ b/app/views/friends/_result.html.erb
@@ -12,7 +12,17 @@
             <tr>
               <td><strong>Name: </strong><%= user.full_name %></td>
               <td><strong>Email: </strong><%= user.email %></td>
-              <td><strong>Profile: </strong><%= link_to "View profile", user_path(user), class: "btn btn-xs btn-success" %></td>
+              <td>
+                <strong>Profile: </strong>
+                <%= link_to "View profile", user_path(user), class: "btn btn-xs btn-success" %>
+                <% if current_user.not_friends_with?(user.id) %>
+                  <%= link_to "Add friend", add_friend_path(user: current_user, friend: user), class: "btn btn-xs btn-success", method: :post %>
+                <% else %>
+                  <span class="label label-primary">
+                    You are already friends
+                  </span>
+                <% end %>
+              </td>
             </tr>
           <% end %>
         </tbody>
