--- a/app/views/friends/_result.html.erb
+++ b/app/views/friends/_result.html.erb
@@ -5,13 +5,12 @@
 <% end %>
 <% if @users %>
   <% if @users.size > 0 %>
-    <div id="friend-lookup-results" class="well results-block col-md-10">
+    <div id="friend-lookup-results" class="well results-block">
       <table class="search-results-table col-md-12">
         <tbody>
           <% @users.each do |user| %>
             <tr>
               <td><strong>Name: </strong><%= user.full_name %></td>
-              <td><strong>Email: </strong><%= user.email %></td>
               <td>
                 <strong>Profile: </strong>
                 <%= link_to "View profile", user_path(user), class: "btn btn-xs btn-success" %>
