--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-default navbar-static-top">
   <div class="container">
-    <a class="navbar-brand" href="#">FinanceTracker</a>
+    <%= link_to "FinanceTracker", root_path, class: "navbar-brand" %>
     <% if current_user %>
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
         <span class="icon-bar"></span>
