--- a/app/views/users/_result.html.erb
+++ b/app/views/users/_result.html.erb
@@ -12,7 +12,7 @@
       <%= link_to 'Add to my stocks', user_stocks_path(user: current_user, stock_ticker: @stock.ticker), class: "btn-xs btn-success", method: :post %>
     <% else %>
       <span class="label label-default">
-        Stock annot be added because you have already added
+        Stock cannot be added because you have already added
         <% if !current_user.under_stock_limit? %>
           10 stocks
         <% end %>
